--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.1"
+    "eslint-config-next": "12.2.1",
+    "typescript": "^4.9.4"
   }
 }
